--- a/payment.css
+++ b/payment.css
@@ -54,6 +54,7 @@ nav {
   list-style: none;
   justify-content: space-around;
   width: 50%;
+  margin-block: 0;
 }
 
 .nav-links .cta {
@@ -104,7 +105,7 @@ nav {
 }
 
 .hamburger {
-  background-color: black;
+  background-color: var(--white);
   border-radius: 1.5rem;
   height: clamp(5px, 6px, 7px);
   position: absolute;
